# langchain-ollama

012_올라마 활용 로컬 RAG - 한국어 PDF 질의응답 (임베딩 성능, Semantic Chunkig)/: .gitignore  pyproject.toml
